update: user annotation selection & approve process
